added valueOf()