@@ -6,14 +6,28 @@ public class WrappersDemo {
 	String s = null;
 
 	public static void main(String[] args) {
-		Integer a = new Integer(10);
-		Integer b = new Integer("10");
+		Integer a = Integer.valueOf(127);
+		Integer b = Integer.valueOf(127);
+		
+		if(a==b)
+			System.out.println("a == b");
+		else
+			System.out.println("a != b");
+		
+		Integer c = Integer.valueOf(128);
+		Integer d = Integer.valueOf(128);
+		
+		if(c==d)
+			System.out.println("c == d");
+		else
+			System.out.println("c != d");
+		
 		// Integer c = new Integer("Apple"); // java.lang.NumberFormatException:
 		// For input string: "Apple"
 
 		int v1 = 10 * a.intValue();
 		int v2 = 10 * b.intValue();
-		System.out.println(Integer.parseInt(args[0]) + Integer.parseInt(args[1]));
+		//System.out.println(Integer.parseInt(args[0]) + Integer.parseInt(args[1]));
 		System.out.println(v1);
 		System.out.println(v2);
 		
